
11. Fix: with APQ, Makeincl no longer aborts a make clean because this generated file was removed in a previous make clean.

12. Refactor: error reporting functions have been redesigned for better security and support for European characters.  Also, highlighted keywords in source lines in error messages.

13. Fix: libc group_member() missing from some Ubuntu Linux where __USE_GNU is not set.  Occurred on a recent Ubuntu update.  Added workaround based on BSD hack.

14. Fix: if an error occurs while parsing a pragma template, do not enable templates and get an internal error when rendering the HTTP header.

15. Fix: template error messages are now consistently written to standard error as a single line for logging purposes.

16. New: basic TOML/INI template support.

17. New: error messages include the percentage of distance through the script where the error occurred.

18. Fix: extended ASCII characters render correctly in log package messages.

19. Change: normal errors (not GCC format) show the line before the error line as well as the error line, for more context.

20. Change: replaced "let" commands in shell scripts with $((..)) to make them compatible with feature-poor dash shell.

21. New: configure --jobs option.

22. Refactor: standardized numeric values in the language to a dedicated type
instead of using long_float's.

23. Fix: directories with spaces now tab complete correctly.

24. Fix: type errors are now caught again in templates.

25. Fix: built-in functions with out parameters no longer require the out variable to be declared first.

26. New: pragma restriction( no_prompt_history ) to disable saving interactive prompt history when SparForte is shutting down.

27. Change: the SIGQUIT signal is now ignored, as in the BASH shell.

28. Change: the SIGTERM signal is handled for interfactive sessions, as in the BASH shell.

29. Change: the provision script supports "without" options.  A full install of all software dependencies is no longer required.
