@@ -2439,9 +2439,13 @@ begin
      content( e, "${X:?Y} - replace with X or show error if X is not empty.  Y is optional error message" );
      content( e, "${X:P} or ${X:P:L} - substring from position P in X length L.  First index is 0." );
      content( e, "${X/S/R} - search for S in X replace with R.  Then replace with the result." );
-     content( e, "$(X^) - replace with proper case of X." );
-     content( e, "$(X^^) - replace with uppercase of X." );
-     content( e, "$(X,,) - replace with lowercase of X." );
+     content( e, "${X^} - replace with proper case of X." );
+     content( e, "${X^^} - replace with uppercase of X." );
+     content( e, "${X,,} - replace with lowercase of X." );
+     content( e, "${X|} - replace with rounded value of X." );
+     content( e, "${X||} - replace with absolute value of X." );
+     content( e, "${X|^} - replace with ceiling of X." );
+     content( e, "${X|,} - replace with floor of X." );
      content( e, "$(X) - replace with output of commands X.  Not recursive." );
      section( e, "Positional Parameters and Special Variables" );
      content( e, "$0 or ${0} - the script path" );
